# pdf-dump

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUGGING_WITH_PDF_DUMP.md  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  LOPDF_SUGGESTION.md  README.md  SUGGESTED_FEATURES.md  bug-report-encrypted-pdf-overview-misparse.md  feature-plan-usage-aware-reliability.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ROADMAP.md
docs/internal/: DESIGN.md
src/: annotations.rs  bookmarks.rs  cmap.rs  diff.rs  embedded.rs  encodings.rs  find_text.rs  fonts.rs  forms.rs  glyphlist.rs  helpers.rs  images.rs  info.rs  inspect.rs  layers.rs  lib.rs  links.rs  main.rs  object.rs  operators.rs  page_info.rs  page_labels.rs  recover.rs  refs.rs  resources.rs  search.rs  security.rs  stats.rs  stream.rs  structure.rs  summary.rs  text.rs  tree.rs  types.rs  validate.rs
tests/: integration.rs  lopdf_canary.rs
