[package]
name = "pdf-dump"
version = "0.10.1"
edition = "2024"

[lib]
name = "pdf_dump"
path = "src/lib.rs"

[[bin]]
name = "pdf-dump"
path = "src/main.rs"

[dependencies]
lopdf = "0.36.0"
clap = { version = "4.4", features = ["derive", "string"] }
flate2 = "1.0"
serde_json = "1.0"
weezl = "0.1"
regex = "1"

[dev-dependencies]
pretty_assertions = "1.4"
serde_json = "1.0"
tempfile = "3.14"
