[package]
name = "pdf-dump"
version = "0.12.5"
edition = "2024"
rust-version = "1.91"
description = "CLI tool for inspecting and debugging PDF internals"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ComposerChrisF/pdf-dump"
homepage = "https://github.com/ComposerChrisF/pdf-dump"
readme = "README.md"
keywords = ["pdf", "cli", "inspect", "debug"]
categories = ["command-line-utilities"]
exclude = ["CLAUDE.md", "DEBUGGING_WITH_PDF_DUMP.md", ".github/", ".claude/", "feature-plan-*", "docs/"]

[lib]
name = "pdf_dump"
path = "src/lib.rs"

[[bin]]
name = "pdf-dump"
path = "src/main.rs"

[dependencies]
lopdf = "0.36.0"
clap = { version = "4.4", features = ["derive", "string"] }
flate2 = "1.0"
serde_json = "1.0"
weezl = "0.1"
regex = "1"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.14"
